--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "howler": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-responsive": "^9.0.2"
+    "react-responsive": "^9.0.2",
+    "tone": "^15.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
