--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "howler": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.23.1",
     "tone": "^15.0.4"
