--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dropzone": "^14.2.3",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.23.1",
-    "tone": "^15.0.4"
+    "tone": "^15.0.4",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
